# arpanrec.nebula

./: .ansible-lint  .gitignore  .yamllint  CHANGELOG.md  DEVELOPMENT.md  LICENSE  README.md  ansible.cfg  galaxy.yml  pyproject.toml  requirements-dev.txt  requirements.txt  requirements.yml
.github/: dependabot.yml
.github/files/: package-lock.json  pnpm-lock.yaml  release.config.cjs  release.config.js  requirements-dev.txt  requirements.txt
.github/workflows/: ansible-lint.yml  ansible_molecule.yml  bandit.yml  black.yml  gitleaks.yml  isort.yml  lint-collection-docs.yml  linting.yml  molecule.yml  molecule_test_role_bitwarden_desktop.yml  molecule_test_role_bws.yml  molecule_test_role_code.yml  molecule_test_role_get_certificate_ownca.yml  molecule_test_role_gitea.yml  molecule_test_role_gitleaks.yml  molecule_test_role_gnome.yml  molecule_test_role_go.yml  molecule_test_role_graalvm.yml  molecule_test_role_hadolint.yml  molecule_test_role_java.yml  molecule_test_role_linux_patching copy.yml  molecule_test_role_linux_patching.yml  molecule_test_role_mattermost_desktop.yml  molecule_test_role_minio.yml  molecule_test_role_nodejs.yml  molecule_test_role_postman.yml  molecule_test_role_pulumi.yml  molecule_test_role_ssh_hardening.yml  molecule_test_role_telegram_desktop.yml  molecule_test_role_terminal copy.yml  molecule_test_role_terminal.yml  molecule_test_role_terraform.yml  molecule_test_role_themes.yml  molecule_test_role_user_add.yml  molecule_test_role_vault.yml  mypy.yml  pylint.yml  release.yml  scans.yml  yamllint.yml
module_utils/version_db/: __init__.py
molecule/plugins.lookup.version_db.default/: converge.yml  molecule.yml  verify.yml
molecule/plugins.module.version_db.default/: Dockerfile.j2  molecule.yml  verify.yml
molecule/role.bitwarden_desktop.default/: Dockerfile.j2  converge.yml  molecule.yml
molecule/role.bitwarden_desktop.docker/: molecule.yml
molecule/role.bw.default/: converge.yml  molecule.yml  verify.yml
molecule/role.bws.default/: converge.yml  molecule.yml  verify.yml
molecule/role.bws.docker/: Dockerfile.j2  converge.yml  molecule.yml  verify.yml
molecule/role.code.default/: converge.yml  molecule.yml  verify.yml
molecule/role.code.docker/: Dockerfile.j2  molecule.yml  verify.yml
molecule/role.dotfiles.default/: converge.yml  molecule.yml
molecule/role.get_certificate_ownca.default/: Dockerfile.j2  converge.yml  molecule.yml  prepare.yml
molecule/role.get_certificate_ownca.docker/: molecule.yml
molecule/role.gitea.docker/: converge.yml  molecule.yml  prepare.yml  verify.yml
molecule/role.gitleaks.default/: converge.yml  molecule.yml  verify.yml
molecule/role.gitleaks.docker/: converge.yml  molecule.yml  verify.yml
molecule/role.gnome.default/: Dockerfile.j2  converge.yml  molecule.yml
molecule/role.gnome.docker/: molecule.yml
molecule/role.go.default/: converge.yml  molecule.yml  verify.yml
molecule/role.go.docker/: molecule.yml  verify.yml
molecule/role.graalvm.docker/: molecule.yml
molecule/role.hadolint.docker/: Dockerfile.j2  converge.yml  molecule.yml  verify.yml
molecule/role.java.default/: Dockerfile.j2  molecule.yml  verify.yml
molecule/role.java.docker/: converge.yml  molecule.yml  verify.yml
molecule/role.kde.default/: converge.yml  molecule.yml
molecule/role.linux_patching.default/: converge.yml  molecule.yml
molecule/role.linux_patching.delegated/: molecule.yml
playbooks/: cloudinit.md  cloudinit.yml  server_workspace.md  server_workspace.yml
(+320 files in other folders)
