[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
no_implicit_optional = true

[tool.pylint."FORMAT"]
max-line-length = 120
indent-string = '    '

[tool.isort]
profile = "black"
line_length = 120

[tool.black]
line-length = 120

[project]
name = "arpanrec-nebula"
version = "1.14.55"
description = "common ansible resources"
authors = [ { name = "arpan", email = "me@arpanrec.com" } ]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12.0"
dependencies = [
    "ansible==13.2.0",
    "cachier==4.1.0",
    "passlib==1.7.4",
    "requests==2.32.5",
    "cryptography==46.0.3",
]

[project.optional-dependencies]
dev = [
    "bandit==1.9.2",
    "black==25.12.0",
    "docker==7.1.0",
    "isort==7.0.0",
    "molecule==25.12.0",
    "molecule-plugins==25.8.12",
    "mypy==1.19.1",
    "neovim==0.3.1",
    "packaging==25.0",
    "pylint==4.0.4",
    "pyright==1.1.407",
    "types-pyyaml==6.0.12.20250915",
    "types-requests==2.32.4.20250913",
    "yamllint==1.37.1",
    "ansible-lint==25.12.2",
    "antsibull-docs==2.24.0",
]
